--- a/Projet_tuto/TODO
+++ b/Projet_tuto/TODO
@@ -6,6 +6,7 @@ Alex :
 -gestion des commandes d'un client (modifs ou suppression) ca par exemple
 
 Ruben : 
+-Page pour qu'un client fasse une commande
 -Responsive design
 -css et html un peu meilleur
 -Lien entre les pages
