--- a/Projet_tuto/TODO
+++ b/Projet_tuto/TODO
@@ -1,12 +1,10 @@
 Alex :
 -Maquettes
--s'occuper des modèles (classe bd.php et p-ê membre.php)
--création compte client, connexion et déconnexion d'un client
--catalogues des produits
 -gestion des commandes d'un client (modifs ou suppression) ca par exemple
+-S'occuper des commandes client
 
 Ruben : 
--Page pour qu'un client fasse une commande
+
 -Responsive design
 -css et html un peu meilleur
 -Lien entre les pages
